# blockchain

./: README.md
DOCA/projects/: flow_common.c  meson.build
DOCA/projects/dpu/: README.md  dataplane.c  main.c  meson.build
blockchain/: package-lock.json  package.json  parsing_test.js  received_data.txt  tcp_server.js
blockchain/contracts/: Lock.sol
blockchain/ignition/modules/: Lock.js
blockchain/scripts/: deploy.js  query.js  socketToBlockchain.js
blockchain/test/: Lock.js
